Upgrade to 8.8.34 General cleanup