@@ -1,30 +1,29 @@
 package org.gridgain.demo;
 
-import java.util.Arrays;
-
 import com.pubnub.api.PNConfiguration;
 import com.pubnub.api.PubNub;
 
-public class PubNubMarketTicker implements MarketTicker {
-    /**
-     * Stream object.
-     */
-    private PubNub stream;
+import java.util.Arrays;
+import java.util.List;
 
+public class PubNubMarketTicker implements MarketTicker {
     /**
      * PubNub stream name.
      */
     protected final static String STREAM_NAME = "pubnub-market-orders";
-
+    /**
+     * Stream object.
+     */
+    private PubNub stream;
     /**
      * PubNub stream subscription key.
      */
-    private String STREAM_SUBSCRIPION_KEY = "sub-c-4377ab04-f100-11e3-bffd-02ee2ddab7fe";
+    private final String STREAM_SUBSCRIPION_KEY = "sub-c-4377ab04-f100-11e3-bffd-02ee2ddab7fe";
 
-	private StreamCallback streamCallback;
+    private final StreamCallback streamCallback;
 
     public PubNubMarketTicker(StreamCallback streamCallback) {
-		this.streamCallback = streamCallback;
+        this.streamCallback = streamCallback;
     }
 
     public void start() {
@@ -34,7 +33,7 @@ public class PubNubMarketTicker implements MarketTicker {
         stream = new PubNub(cfg);
 
         stream.addListener(streamCallback);
-        stream.subscribe().channels(Arrays.asList(STREAM_NAME)).execute();
+        stream.subscribe().channels(List.of(STREAM_NAME)).execute();
     }
 
     public void stop() {
